--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ button{
 
 .check{width :100px;}
 input{
-    font-size:20px;
+    font-size:15px;
     float:right;
     border-radius:4px;
     width :100px;
@@ -99,6 +99,9 @@ input{
     margin:0px 100px 30px 100px;
     padding:10px;
     font-size:40px;
+    font-weight:bold;
+
+    color:black;
 }
 
 
