--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body{
 
 form{
     /* display: inline-block; */
-    margin-right:auto; margin-left:auto
+    margin-right:auto; margin-left:auto;
     
   }
 
@@ -61,6 +61,23 @@ button{
 
 }
 
+button2{
+    font-size:30px;
+    /* float:center; */
+    color:rgb(27, 26, 26);
+    border-radius:4px;
+    width :60px;
+    text-align: center;
+    padding: 10px;
+    background-color: rgb(187, 184, 195);
+    margin-bottom: 15px;
+    margin-right:15px;
+    border: 2px solid #000;
+
+}
+
+
+
 .check{width :110px;}
 input{
     font-size:15px;
@@ -90,6 +107,7 @@ input{
 #question{
     margin-bottom: 35px;
     font-size:50px;
+    font-family:fujiwara math;
     font-weight:bold;
     text-align: center;
 }
@@ -109,6 +127,7 @@ input{
     padding:10px;
     font-size:40px;
     font-weight:bold;
+    font-family:fujiwara math;
     color:black;
 }
 
@@ -161,6 +180,8 @@ input{
     display:block;
     text-decoration:none;
 }
+
+
 
 
 
@@ -219,7 +240,7 @@ button {
     right:0;
     left:0;
     transition:transform 0.4s;
-    font-size:25px;
+    font-size:40px;
     color:white;
     font-weight:bold;
     text-align: center;
@@ -237,7 +258,8 @@ button {
     right:0;
     left:0;
     transition:transform 0.4s;
-    font-size:30px;
+    font-size:40px;
+    font-family:fujiwara math;
     color:white;
     font-weight:bold;
     text-align: center;
@@ -245,7 +267,27 @@ button {
 }
 #modal3 
 {
-    background:rgb(20, 104, 138);
+    background:rgb(25, 130, 172);
+    width:400px;
+    height:400px;
+    padding:20px;
+    border-radius:14px;
+    position:absolute;
+    /* margin:0 auto; */
+    right:0;
+    left:0;
+    transition:transform 0.4s;
+    font-size:40px;
+    color:rgb(238, 225, 225);
+    font-family: "Noto Sans CJK JP"; 
+    font-weight:900;
+    text-align: center;
+    line-height:60px;
+}
+
+#modal4
+{
+    background:rgb(212, 49, 24);
     width:400px;
     height:400px;
     padding:20px;
@@ -259,8 +301,19 @@ button {
     color:rgb(238, 225, 225);
     font-weight:bold;
     text-align: center;
-    line-height:100px;
+    line-height:60px;
 }
+
+#answer{
+    font-size:60px;
+    font-family:fujiwara math;
+    color:white;
+    font-weight:bold;
+    text-align: center;
+
+}
+
+
 #modal > p{
     margin:0 0 20px;
 }
@@ -272,7 +325,8 @@ button {
 }
 #modal.hidden,
 #modal2.hidden,
-#modal3.hidden
+#modal3.hidden,
+#modal4.hidden
 {
     transform:translate(0, -600px);
 }
@@ -293,8 +347,4 @@ img{
     height:170px;
 }
 
-
-
-
-
-
+#modal4 > button,
