--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ input{
     padding:10px;
     font-size:40px;
     font-weight:bold;
-    font-family:sans-serif	;
+    font-family:times new roman		;
     color:black;
 }
 
